# csv-to-parquet-rust

./: Cargo.toml  Makefile  README.fr.md  README.md  demo.sh  enregistrer-demo.sh  pyproject.toml
src/: analysis.rs  csv_generator.rs  lib.rs  main.rs  schema.rs  utils.rs
src/analysis/: builders.rs  conversions.rs  types.rs
src/conversion/: counting.rs  csv_blocks.rs  mod.rs  parquet_writer.rs  pipeline.rs  ticker.rs
tests/: analysis_tests.rs  conversions_tests.rs  delimiter_tests.rs  error_analysis_tests.rs  heuristic_robustness_tests.rs  integration_pipeline_tests.rs  schema_tests.rs  schema_threshold_tests.rs  strict_order_tests.rs  utils_tests.rs
