[package]
name = "csv_to_parquet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "csv_to_parquet"
path = "src/main.rs"

[[bin]]
name = "csv_generator"
path = "src/csv_generator.rs"

[dependencies]
anyhow = "1"
arrow = "58.0.0"
chrono = { version = "*", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
colored = "3.1.1"
crossbeam = "0.8"
csv = "1.4"
indicatif = "0.18"
lexical-core = "1.0"
log = "0.4"
parquet = "58.0.0"
rand = "0.10"
rayon = "1.11"
tempfile = "3"
